Fix tooltip wrapping (#461)
* Fix tooltip wrapping

Looks like the metadata table wasn't using the same class definition

* Attempting to zero in on test bug

* Fix table name

* Check for single user

--- a/sfdx/force-app/main/default/lwc/dataMappingStep/dataMappingStep.css
+++ b/sfdx/force-app/main/default/lwc/dataMappingStep/dataMappingStep.css
@@ -22,6 +22,7 @@
     width: 1px;
 }
 
+.stripe-table_metadata.slds-table td,
 .stripe-table_mapping.slds-table td {
     white-space: normal;
     vertical-align: top;
